ignite-gg-11650 bat script update